--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body{
     font-size: 15px;
 }
 main{
-    width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     place-items: center;
     grid-template-rows: 1fr auto;
